feature pic change

--- a/templates/doc.html
+++ b/templates/doc.html
@@ -48,15 +48,15 @@
       <div id="patient-panel" class="panel patient-panel hidden">
         <form method="post">
           <label>Patient ID</label>
-          <input type="text" name="id" required placeholder="Integer e.g. 17">
+          <input type="text" name="id" required placeholder="e.g. 17">
           <label>Arrivial Time</label>
-          <input type="text" name="arrival_time" placeholder="Integer e.g. 22">
+          <input type="text" name="arrival_time" placeholder="e.g. 22">
           <label>Acuity Level</label>
-          <input type="text" name="acuity_level" placeholder="Integer from 1-5">
+          <input type="text" name="acuity_level" placeholder="e.g. 1">
           <label>Treatment Plan</label>
-          <input type="text" name="treatment_plan" placeholder="Array e.g. 1, 2, 3, 8">
+          <input type="text" name="treatment_plan" placeholder="e.g. 1, 2, 3, 8">
           <label>Treatment Time</label>
-          <input type="text" name="treatment_time" placeholder="Array e.g. 1, 1, 8, 22">
+          <input type="text" name="treatment_time" placeholder="e.g. 1, 1, 8, 22">
           <div class="button-group">
             <button type="submit" name="action" value="add">Add/Edit Patient</button>
             <button type="submit" name="action" value="remove">Remove Patient</button>
