--- a/templates/doc.html
+++ b/templates/doc.html
@@ -112,57 +112,57 @@
             <img src="../static/doc1.jpeg" alt="Doctor 1">
             <h3>Alexander Morgan</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-0">Status: ???</p>
-            <p id="task-0">Task: ???</p>
+            <p id="status-0">Status: Available</p>
+            <p id="task-0">Task: </p>
           </div>
           <div class="card" id="resource-1">
             <img src="../static/doc9.jpg" alt="Doctor 2">
             <h3>Amelia Brooks</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-1">Status: ???</p>
-            <p id="task-1">Task: ???</p>
+            <p id="status-1">Status: Available</p>
+            <p id="task-1">Task: </p>
           </div>
           <div class="card" id="resource-2">
             <img src="../static/doc10.jpg" alt="Doctor 3">
             <h3>Charlotte Hayes</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-2">Status: ???</p>
-            <p id="task-2">Task: ???</p>
+            <p id="status-2">Status: Available</p>
+            <p id="task-2">Task: </p>
           </div>
           <div class="card" id="resource-3">
             <img src="../static/doc4.jpeg" alt="Doctor 4">
             <h3>Ryan Blake</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-3">Status: ???</p>
-            <p id="task-3">Task: ???</p>
+            <p id="status-3">Status: Available</p>
+            <p id="task-3">Task: </p>
           </div>
           <div class="card" id="resource-4">
             <img src="../static/doc5.jpeg" alt="Doctor 5">
             <h3>Thomas Maxwell</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-4">Status: ???</p>
-            <p id="task-4">Task: ???</p>
+            <p id="status-4">Status: Available</p>
+            <p id="task-4">Task: </p>
           </div>
           <div class="card" id="resource-5">
             <img src="../static/doc6.jpeg" alt="Doctor 6">
             <h3>William Dalton</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-5">Status: ???</p>
-            <p id="task-5">Task: ???</p>
+            <p id="status-5">Status: Available</p>
+            <p id="task-5">Task: </p>
           </div>
           <div class="card" id="resource-6">
             <img src="../static/doc12.jpg" alt="Doctor 7">
             <h3>Grace Ellis</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-6">Status: ???</p>
-            <p id="task-6">Task: ???</p>
+            <p id="status-6">Status: Available</p>
+            <p id="task-6">Task: </p>
           </div>
           <div class="card" id="resource-7">
             <img src="../static/doc13.jpg" alt="Doctor 8">
             <h3>Quinn Taylor</h3>
             <h3>Position: Doctor</h3>
-            <p id="status-7">Status: ???</p>
-            <p id="task-7">Task: ???</p>
+            <p id="status-7">Status: Available</p>
+            <p id="task-7">Task: </p>
           </div>
 
           <!-- 7 Nurses -->
@@ -170,50 +170,50 @@
             <img src="../static/nurse1.jpg" alt="Nurse 1">
             <h3>Fiona Summers</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-8">Status: ???</p>
-            <p id="task-8">Task: ???</p>
+            <p id="status-8">Status: Available</p>
+            <p id="task-8">Task: </p>
           </div>
           <div class="card" id="resource-9">
             <img src="../static/nurse2.jpg" alt="Nurse 2">
             <h3>Daisy Monroe</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-9">Status: ???</p>
-            <p id="task-9">Task: ???</p>
+            <p id="status-9">Status: Available</p>
+            <p id="task-9">Task: </p>
           </div>
           <div class="card" id="resource-10">
             <img src="../static/nurse3.jpg" alt="Nurse 3">
             <h3>Bella Crawford</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-10">Status: ???</p>
-            <p id="task-10">Task: ???</p>
+            <p id="status-10">Status: Available</p>
+            <p id="task-10">Task: </p>
           </div>
           <div class="card" id="resource-11">
             <img src="../static/nurse4.jpg" alt="Nurse 4">
             <h3>Samuel Turner</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-11">Status: ???</p>
-            <p id="task-11">Task: ???</p>
+            <p id="status-11">Status: Available</p>
+            <p id="task-11">Task: </p>
           </div>
           <div class="card" id="resource-12">
             <img src="../static/nurse5.jpg" alt="Nurse 5">
             <h3>Hannah Parker</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-12">Status: ???</p>
-            <p id="task-12">Task: ???</p>
+            <p id="status-12">Status: Available</p>
+            <p id="task-12">Task: </p>
           </div>
           <div class="card" id="resource-13">
             <img src="../static/nurse6.jpg" alt="Nurse 6">
             <h3>Lily Bennett</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-13">Status: ???</p>
-            <p id="task-13">Task: ???</p>
+            <p id="status-13">Status: Available</p>
+            <p id="task-13">Task: </p>
           </div>
           <div class="card" id="resource-14">
             <img src="../static/nurse7.jpg" alt="Nurse 7">
             <h3>Mia Hart</h3>
             <h3>Position: Nurse</h3>
-            <p id="status-14">Status: ???</p>
-            <p id="task-14">Task: ???</p>
+            <p id="status-14">Status: Available</p>
+            <p id="task-14">Task: </p>
           </div>
 
           <!-- 2 X-Ray -->
@@ -221,15 +221,15 @@
             <img src="../static/X-RAY1.jpg" alt="X-Ray 1">
             <h3>Patrick Walsh</h3>
             <h3>Position: X-Ray Technician</h3>
-            <p id="status-15">Status: ???</p>
-            <p id="task-15">Task: ???</p>
+            <p id="status-15">Status: Available</p>
+            <p id="task-15">Task: </p>
           </div>
           <div class="card" id="resource-16">
             <img src="../static/X-RAY2.jpg" alt="X-Ray 2">
             <h3>Oliver Dean</h3>
             <h3>Position: X-Ray Technician</h3>
-            <p id="status-16">Status: ???</p>
-            <p id="task-16">Task: ???</p>
+            <p id="status-16">Status: Available</p>
+            <p id="task-16">Task: </p>
           </div>
 
           <!-- 2 CT -->
@@ -237,15 +237,15 @@
             <img src="../static/ct1.jpg" alt="CT 1">
             <h3>Jack Sullivan</h3>
             <h3>Position: CT Technician</h3>
-            <p id="status-17">Status: ???</p>
-            <p id="task-17">Task: ???</p>
+            <p id="status-17">Status: Available</p>
+            <p id="task-17">Task: </p>
           </div>
           <div class="card" id="resource-18">
             <img src="../static/ct2.jpg" alt="CT 2">
             <h3>Katherine Shaw</h3>
             <h3>Position: CT Technician</h3>
-            <p id="status-18">Status: ???</p>
-            <p id="task-18">Task: ???</p>
+            <p id="status-18">Status: Available</p>
+            <p id="task-18">Task: </p>
           </div>
         </div>
 
